# llvm-infra

./: Cargo.toml  README.md
data/: aes128.bc  mnist.bc
doc/: build_llvm.md  llvm_tools.md
examples/: add_func_and_globalvar.rs
src/: attr.rs  bitreader.rs  display.rs  error.rs  lib.rs  meta.rs  utils.rs
src/bitcode/: abbrev.rs  convert.rs  entry.rs  mod.rs  parse.rs
src/bitcode/blocks/: app_spec.rs  blockinfo.rs  constants.rs  data_layout.rs  function_record.rs  globalvar.rs  identification.rs  metadata.rs  metadata_attachment.rs  metadata_kind.rs  mod.rs  moduleblock.rs  operand_bundle_tags.rs  param_attr.rs  param_attr_group.rs  str_sym_table.rs  sync_scope_names.rs  typeblock.rs  uselist.rs  value_symtab.rs
src/bitcode/blocks/function_block/: inst_alloca.rs  inst_atomicrmw.rs  inst_binop.rs  inst_br.rs  inst_call.rs  inst_cast.rs  inst_cmp.rs  inst_cmpxchg.rs  inst_extractelt.rs  inst_extractval.rs  inst_fence.rs  inst_freeze.rs  inst_gep.rs  inst_insertelt.rs  inst_insertval.rs  inst_invoke.rs  inst_landingpad.rs  inst_load.rs  inst_loadatomic.rs  inst_phi.rs  inst_resume.rs  inst_ret.rs  inst_shufflevec.rs  inst_store.rs  inst_storeatomic.rs  inst_switch.rs  inst_unop.rs  inst_unreachble.rs  inst_vselect.rs  mod.rs  utils.rs
src/filebit/: filevec.rs  mod.rs  reader.rs  utils.rs  writer.rs
src/pass/: mod.rs
tests/: bitcode.rs  bitreader.rs  filebit.rs  id.rs
